--- a/CSS/font+properties/index.html
+++ b/CSS/font+properties/index.html
@@ -23,7 +23,7 @@
       font-weight: 900;
     }
     .family{
-      font-family: caveat;
+      font-family: 'caveat', cursive;
 
     }
     .align{
@@ -36,6 +36,9 @@
 
     
   </style>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 </head>
 
 <body>
